<resources>
    <string name="app_name">Gunadarma Messenger</string>
    <string name="this_is_main_page">This Is Main Page</string>
    <string name="display_name">Display name</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="this_is_main_page_of_this_app">This is main page of this app</string>
    <string name="log_out">Log Out</string>
    <string name="mainpage_loggout_btn">mainpage_loggout_btn</string>
    <string name="welcome_to_natanchatapp">Welcome To NatanChatApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="welcome_to_start_page_of_this_app">Welcome to start page of this app</string>
    <string name="welcome_to_natan_chatapps">Welcome to Natan ChatApps</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT?</string>
    <string name="create_new_one">CREATE NEW ONE</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_to_your_acccount">Login to you acccount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_im_using_natan_chatapp">Hi there. im using Natan ChatApp</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="welcome_to_chat_page">Welcome to chat page</string>
    <string name="CHANNEL_ID" />
    <string name="status">Status</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="welcome_to_gunadarma_messanger">Welcome To Gunadarma Messanger</string>
</resources>
